Cycles blackbody shader-node doesn't look the same with CPU, OSL and GPU. #49253

Closed
opened 2016-09-04 18:53:14 +02:00 by Miika Puustinen (miikap) · 11 comments

System Information
Windows 10 2xGTX960

Blender Version
Broken: 2.78RC1 0e5089c

Short description of error
Cycles blackbody shader-node doesn't look the same with CPU, OSL and GPU.
OSL and GPU have proper color range, but CPU without osl clamps values and makes weird pink color after that.

Exact steps for others to reproduce the error

  1. Select default Cube and go to material nodes
  2. Apply following nodes to the material Gradient Texture-->Multiply (5000)-->Blackbody-->Emission-->Material Output
  3. Switch render engine between CPU, GPU and OSL

.blend:
http://pasteall.org/blend/index.php?id=43374

**System Information** Windows 10 2xGTX960 **Blender Version** Broken: 2.78RC1 0e5089c **Short description of error** Cycles blackbody shader-node doesn't look the same with CPU, OSL and GPU. OSL and GPU have proper color range, but CPU without osl clamps values and makes weird pink color after that. **Exact steps for others to reproduce the error** 1. Select default Cube and go to material nodes 2. Apply following nodes to the material Gradient Texture-->Multiply (5000)-->Blackbody-->Emission-->Material Output 3. Switch render engine between CPU, GPU and OSL .blend: http://pasteall.org/blend/index.php?id=43374
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MiikaPuustinen

Added subscriber: @MiikaPuustinen

Added subscriber: @Sergey

Added subscriber: @Sergey

I can't reproduce the issue neither on Windows 10 nor on Linux Debian stable.

Does it happen for both viewport and final renders?

Can you try following:

  • Set debug value (shortcut is Ctrl-Alt-D) to 256.
  • This will enable some "secret" Debug panel in the Render settings.
  • See if disabling SSE/AVX options makes a difference on the error.
  • Please note that changing those options does not re-trigger viewport update, so you'll have to do it manually after tweaking any settings there.
I can't reproduce the issue neither on Windows 10 nor on Linux Debian stable. Does it happen for both viewport and final renders? Can you try following: - Set debug value (shortcut is `Ctrl-Alt-D`) to 256. - This will enable some "secret" Debug panel in the Render settings. - See if disabling SSE/AVX options makes a difference on the error. - Please note that changing those options does not re-trigger viewport update, so you'll have to do it manually after tweaking any settings there.
Author
Member

Final and preview renders.

Ok found which causes it. It's happening on win10 if AVX2 is on.

Here screenshots how the blackbody looks like when it's not working correctly:
http://pasteall.org/pic/index.php?id=106479

And correct one:
http://pasteall.org/pic/index.php?id=106478

Final and preview renders. Ok found which causes it. It's happening on win10 if AVX2 is on. Here screenshots how the blackbody looks like when it's not working correctly: http://pasteall.org/pic/index.php?id=106479 And correct one: http://pasteall.org/pic/index.php?id=106478
Sergey Sharybin was assigned by Aaron Carlisle 2017-02-02 16:53:29 +01:00

Doesn't happen on Linux..

Does it happen with latest builds from builder.blender.org? Does it happen with both msvc2013 and msvc2015 builds?

Doesn't happen on Linux.. Does it happen with latest builds from builder.blender.org? Does it happen with both msvc2013 and msvc2015 builds?
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Using latest buildbot builds ( 9f67367 ) it only happens to the AVX2 kernel

2013_x64 - Bad
2013_x86 - OK
2015 X64 - OK
2015 X86 - Cycles is broken due to codegen bug, can't test

Using latest buildbot builds ( 9f67367 ) it only happens to the AVX2 kernel 2013_x64 - Bad 2013_x86 - OK 2015 X64 - OK 2015 X86 - Cycles is broken due to codegen bug, can't test

This issue was referenced by blender/cycles@f0d80fd1ca

This issue was referenced by blender/cycles@f0d80fd1ca75adf471888da15347e19b9a86bf04

This issue was referenced by 53896d4235

This issue was referenced by 53896d4235d883f39d4b02119419c462ab65a3a7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49253
No description provided.